clusters/home/apps/n8n/app/restricted.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: n8n.psalkowski.pl
    external-dns.alpha.kubernetes.io/target: psalkowski.pl
    nginx.ingress.kubernetes.io/whitelist-source-range: "${allowed_ip}"
    kubernetes.io/ingress.class: nginx
  name: n8n-restricted
  namespace: n8n
spec:
  ingressClassName: nginx
  rules:
    - host: n8n.psalkowski.pl
      http:
        paths:
          - backend:
              service:
                name: n8n
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - n8n.psalkowski.pl
      secretName: n8n.psalkowski.pl-tls
